# eagle502

joy_handler_ps3/: CMakeLists.txt  package.xml
joy_handler_ps3/launch/: joy_handler_ps3.launch
joy_handler_ps3/msg/: JoySelectedData.msg
joy_handler_ps3/src/: joy_handler_ps3.cpp
scscl_control/: CMakeLists.txt  package.xml
scscl_control/src/: main.cpp  scscl_control.cpp  scscl_control.h  scscl_protocol.cpp  scscl_protocol.h  serial_com.cpp  serial_com.h
snake_control/: CMakeLists.txt  package.xml
snake_control/launch/: snake_control.launch
snake_control/src/: dxl_xh_test.cpp  dxl_xh_test.h  helical_wave_propagate_motion.cpp  helical_wave_propagate_motion.h  inchworm_gait.cpp  inchworm_gait.h  main.cpp  main.cpp~  pedal_wave_motion.cpp  pedal_wave_motion.h  robot_spec.h  shift_control_method.cpp  shift_control_method.h  sidewinding.cpp  sidewinding.h  sinus_lifting.cpp  sinus_lifting.h  snake_control.cpp  snake_control.h  snake_control_request.cpp  snake_control_request.h  winding_gait.cpp  winding_gait.h
snake_description/: CMakeLists.txt  package.xml
snake_description/launch/: snake_description.launch
snake_description/launch/config/: snake_description.rviz
snake_description/meshes/DAE/: flangs.dae  gopro.dae  head_link.dae  pitch.dae  pitch3.dae  pitch4.dae  pitch_motor_link.dae  pitch_motor_link2.dae  pitch_motor_link3.dae  tail_link.dae  yaw.dae  yaw3.dae  yaw4.dae  yaw_motor_link.dae  yaw_motor_link2.dae  yaw_motor_link3.dae
snake_description/meshes/STL/: Gopro.stl  flangs.stl  motor_link.stl.org  motor_link.stl.org1  motor_link.stl.org2  motor_unit3.stl  new_motor_link.stl
snake_description/urdf/: snake.gazebo.xacro  snake.urdf.xacro  snakebot.gv  snakebot.urdf  test1.urdf
snake_gazebo/: CMakeLists.txt  package.xml
snake_gazebo/config/: snake_control_gazebo.yaml  snake_control_gazebo.yaml.org1
snake_gazebo/launch/: snake_control_gazebo.launch  snake_gazebo_world.launch  snakebot_control_gazebo.launch.org1
snake_gazebo/models/: snake_gazebo_test.xacro
snake_gazebo/src/: main.cpp  snake_gazebo.cpp  snake_gazebo.h
snake_gazebo/worlds/: snake_gazebo.world  snake_gazebo.world~
snake_msgs/: CMakeLists.txt  package.xml
snake_msgs/msg/: SnakeCOPCommand.msg  SnakeCOPData.msg  SnakeIMUCommand.msg  SnakeIMUData.msg  SnakeJointError.msg  SnakeSlaveMCUData.msg  SnakeSlaveMCUError.msg  snake_joint_command.msg  snake_joint_command4V2.msg  snake_joint_data.msg  snake_joint_data4V2.msg
vrep_control/: CMakeLists.txt~  package.xml  package.xml~
vrep_control/launch/: vrep_control.launch  vrep_control.launch~
vrep_control/src/: configuration.h  configuration.h~  control_robot_for_vrep.cpp  control_robot_for_vrep.h  control_robot_in_vrep.h~  extApi.h  extApiPlatform.h  main.cpp  main.cpp~  robot_control_for_vrep.cpp~  robot_control_for_vrep.h~  vrep.cpp  vrep.cpp~  vrep.h  vrep.h~
