<?xml version="1.0"?>
<package>
  <name>snake_description</name>
  <version>0.0.0</version>
  <description>The snake_description package</description>

  <maintainer email="qi.w@imun.edu.cn">TI</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
