<?xml version="1.0"?>
<package>
  <name>snake_gazebo</name>
  <version>1.0.0</version>
  <description>The snake_gazebo package</description>

  <maintainer email="qiwei_2011@yahoo.co.jp">TI</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>snake_msgs</build_depend> 

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>snake_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>snake_control</run_depend>
  <run_depend>snake_description</run_depend>
  <run_depend>xacro</run_depend>
  
  
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>

</package>
