<?xml version="1.0"?>
<package>
  <name>snake_msgs</name>
  <version>0.0.0</version>
  <description>The snake_msgs package</description>

  <maintainer email="qi.w@imun.edu.cn">TI</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
